fix: fix logo positioning to be near left margin of viewport
Page body width was too narrow. Was adjusted to cover viewport width and now logo sits on its correct spot. Also index.css is not taken into account on index.js to avoid interference with new styles.

--- a/src/css/elements/container.css
+++ b/src/css/elements/container.css
@@ -1,5 +1,6 @@
 .container {
-    width: 1440px;
+    /* width: 1440px; */
+    width: 100vw;
     height: 1024px;
     padding: 145px 348px;
     position: relative;
