--- a/src/css/elements/logo.css
+++ b/src/css/elements/logo.css
@@ -1,5 +1,5 @@
 .logo {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 37px;
+    left: 2%;
 }
